# trait-link

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: blocking_client.rs  examples.md  nested_client.rs  nested_server.rs  resources_server.rs  todo_client.rs  todo_server.rs  wasm_client.rs
examples/traits/: nested.rs  todo.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros_impl/: Cargo.toml
macros_impl/src/: lib.rs  output.rs  parse.rs
macros_impl/src/output/: client.rs  request.rs  response.rs  server.rs
macros_impl/src/tests/: mod.rs
macros_impl/src/tests/inputs/: nested.rs  public.rs  resource.rs  simple.rs
macros_impl/src/tests/outputs/: nested.rs  resource.rs  simple.rs
macros_impl/src/tests/outputs_client/: public.rs
macros_impl/src/tests/outputs_server/: public.rs
src/: browser.rs  client.rs  format.rs  lib.rs  reqwest.rs
src/client/: browser.rs  reqwest.rs  reqwest_blocking.rs  wasm_websocket.rs  websocket.rs
src/format/: browser_json.rs  cbor.rs  json.rs
src/server/: axum.rs
