[workspace]
members = ["macros", "macros_impl"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[package]
name = "trait-link"
version.workspace = true
edition.workspace = true

[features]
axum = ["dep:axum", "tower"]
browser = ["web-sys", "wasm-bindgen-futures", "serde-wasm-bindgen"]
reqwest-blocking = ["reqwest", "reqwest/blocking"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["json"], optional = true }
thiserror = "2.0.17"
axum = { version = "0.8.7", optional = true, features = ["macros"]}
tower = { version = "0.5.2", optional = true }
macros = { path = "macros" }
serde_json = "1.0.145"
futures = "0.3.31"
bon = "3.8.1"

# WASM dependencies
wasm-bindgen-futures = { version = "0.4", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[dependencies.web-sys]
version = "0.3"
optional = true
features = ["Window", "Request", "Response", "RequestInit", "RequestMode", "ReadableStream", "Headers"]

[dev-dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
tokio = { version = "1.48.0", features = ["full"] }

[[example]]
name = "todo_client"
required-features = ["reqwest"]

[[example]]
name = "blocking_client"
required-features = ["reqwest-blocking"]

[[example]]
name = "nested_client"
required-features = ["reqwest"]


[[example]]
name = "todo_server"
required-features = ["axum"]

[[example]]
name = "nested_server"
required-features = ["axum"]